--- a/advice-generator-app-main/css/index.css
+++ b/advice-generator-app-main/css/index.css
@@ -29,6 +29,7 @@ body {
 }
 .advice {
   width: calc(100% - 2rem);
+  max-width: 500px;
   height: 80vh;
   margin-left: auto;
   margin-right: auto;
@@ -38,30 +39,38 @@ body {
 }
 .advice__inner {
   position: relative;
-  max-height: 290px;
+  width: 100%;
+  height: 48vh;
   padding: 1em 0.6em;
-  height: 40vh;
   background-color: var(--darkgrayishblue);
   border-radius: 0.8em;
 }
-.advice__inner::before {
-  content: "";
+@media screen and (min-width: 400px) {
+  .advice__inner {
+    height: 260px;
+  }
+}
+.advice__dice {
   position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 60px;
   height: 60px;
   background-color: var(--neongreen);
   border-radius: 50%;
 }
-.advice__inner::after {
-  content: "";
-  position: absolute;
+@media (hover: hover) {
+  .advice__dice:hover {
+    cursor: pointer;
+    box-shadow: 1px 1px 30px 3px var(--neongreen);
+  }
+}
+.dice {
   width: 25px;
   height: 25px;
-  background-image: url(../images/icon-dice.svg);
-  background-repeat: no-repeat;
 }
-.advice__inner::before,
-.advice__inner::after {
+.advice__dice {
   bottom: 0;
   left: 50%;
   transform: translate(-50%, 50%);
@@ -94,6 +103,18 @@ body {
 .quote {
   font-size: 2.5rem;
   color: var(--lightcyan);
+  margin-bottom: 0.5em;
+}
+@media screen and (min-width: 576px) {
+  .advice__quote::after {
+    background-image: url(../images/pattern-divider-desktop.svg);
+  }
+}
+@media screen and (min-width: 400px) {
+  .advice__quote {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 .footer {
   margin-top: auto;
